reference compass from github

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,13 +3,20 @@ description: A flutter map plugin for displaying device current location.
 version: 3.1.0
 homepage: https://github.com/tlserver/flutter_map_location_marker
 
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_compass: ^0.7.0
+  # flutter_compass: ^0.7.0
+  flutter_compass:
+    # path: ../flutter_compass
+    git: 
+      url: https://github.com/thzero/flutter_compass
+      ref: direction_issue
   flutter_map: ^0.14.0
   geolocator: ^8.2.0
   latlong2: ^0.8.1
