--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,12 @@ dependencies:
     sdk: flutter
   # flutter_compass: ^0.7.0
   flutter_compass:
-    git: 
-      url: https://github.com/thzero/flutter_compass
-      ref: direction_issue
-  flutter_map: ^1.0.0
-  geolocator: ^8.2.1
+    path: ../flutter_compass
+    # git: 
+    #   url: https://github.com/thzero/flutter_compass
+    #   ref: direction_issue
+  flutter_map: ^1.1.1
+  geolocator: ^9.0.0
   latlong2: ^0.8.1
 
 dev_dependencies:
